Got errors, but I think I fixed them

--- a/ch_3/sample_app/app/views/static_pages/help.html.erb
+++ b/ch_3/sample_app/app/views/static_pages/help.html.erb
@@ -1,2 +1,11 @@
-<h1>Help</h1>
-<p>This is a help page, apparently.</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Help</title>
+  </head>
+
+<body>
+  <h1>This is the Help Page</h1>
+  <p>This is the help page. No support currently available.</p>
+</body>
+</html>
