--- a/ch_3/sample_app/app/views/static_pages/home.html.erb
+++ b/ch_3/sample_app/app/views/static_pages/home.html.erb
@@ -1,2 +1,11 @@
-<h1>This is the Home Page</h1>
-<p>I am creating a sample application as a part of a tutorial</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Home</title>
+  </head>
+
+<body>
+  <h1>This is the Home Page</h1>
+  <p>I am creating a sample application as a part of a tutorial</p>
+</body>
+</html>
