Modified routes to display my Home page and deleted sample Hello function

--- a/ch_3/sample_app/app/views/static_pages/about.html.erb
+++ b/ch_3/sample_app/app/views/static_pages/about.html.erb
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>About</title>
-  </head>
-
-<body>
-  <h1>This is the About Page</h1>
-  <p>I expect a lot of errors to arise from this.</p>
-</body>
-</html>
+<% provide(:title, "About") %>
+<h1>This is the About Page</h1>
+<p>I expect a lot of errors to arise from this.</p>
