--- a/ch_3/sample_app/app/views/static_pages/home.html.erb
+++ b/ch_3/sample_app/app/views/static_pages/home.html.erb
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Home</title>
-  </head>
-
-<body>
-  <h1>This is the Home Page</h1>
-  <p>I am creating a sample application as a part of a tutorial</p>
-</body>
-</html>
+<% provide(:title, "Home") %>
+<h1>This is the Home Page</h1>
+<p>I am creating a sample application as a part of a tutorial</p>
